--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <div class="navbar">
-    <img src="logo/Perpustakaan Jaya.png" alt="Logo Website" class="logo" />
+    <img src="Perpustakaan Jaya.png" alt="Logo Website" class="logo" />
     <div class="search-container">
     <input type="text" class="search-bar" placeholder="Cari buku..." /></div>
     <nav class="menu" id="menu">
@@ -43,7 +43,7 @@
   <h3>Galeri Buku</h3>
   <div class="gallery-grid">
     <div class="book-card">
-      <img src="buku/buku1.jpg" alt="Tales Under a Purple Sky" />
+      <img src="buku1.jpg" alt="Tales Under a Purple Sky" />
       <p>Tales Under a Purple Sky</p>
        <div class="rating">
         ★★★★☆ 
@@ -52,7 +52,7 @@
     </div>
 
     <div class="book-card">
-      <img src="buku/buku2.jpg" alt="Prayer Journal" />
+      <img src="buku2.jpg" alt="Prayer Journal" />
       <p>Prayer Journal</p>
       <div class="rating">
         ★★★★☆
@@ -61,7 +61,7 @@
     </div>
 
     <div class="book-card">
-      <img src="buku/buku3.jpg" alt="The Story Of The Boy" />
+      <img src="buku3.jpg" alt="The Story Of The Boy" />
       <p>The Story Of The Boy</p>
        <div class="rating">
         ★★★★★
@@ -70,7 +70,7 @@
     </div>
 
     <div class="book-card">
-      <img src="buku/buku4.jpg" alt="Garden" />
+      <img src="buku4.jpg" alt="Garden" />
       <p>Garden</p>
        <div class="rating">
         ★★★★★
@@ -79,7 +79,7 @@
     </div>
 
      <div class="book-card">
-      <img src="buku/buku5.jpg" alt="Soul" />
+      <img src="buku5.jpg" alt="Soul" />
       <p>Soul</p>
       <div class="rating">
         ★★★☆☆
@@ -88,7 +88,7 @@
     </div>
 
     <div class="book-card">
-      <img src="buku/buku6.jpg" alt="Venus" />
+      <img src="buku6.jpg" alt="Venus" />
       <p>Venus</p>
       <div class="rating">
         ★★★★☆
@@ -97,7 +97,7 @@
     </div>
 
     <div class="book-card">
-      <img src="buku/buku7.jpg" alt="Fairy Tale" />
+      <img src="buku7.jpg" alt="Fairy Tale" />
       <p>Fairy Tale</p>
       <div class="rating">
         ★★★★☆
@@ -106,7 +106,7 @@
     </div>
 
     <div class="book-card">
-      <img src="buku/buku8.jpg" alt="The Lost Kingdom" />
+      <img src="buku8.jpg" alt="The Lost Kingdom" />
       <p>The Lost Kingdom</p>
       <div class="rating">
         ★★★★★
