--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 <footer class="site-footer">
   <div class="footer-content">
-    <img src="logo/Perpustakaan Jaya.png" alt="Logo" class="footer-logo" />
+    <img src="Perpustakaan Jaya.png" alt="Logo" class="footer-logo" />
     <p>© 2025 Perpustakaan Jaya.</p>
   </div>
 </footer>
